--- a/nginx.yml
+++ b/nginx.yml
@@ -1,31 +1,37 @@
-apiVersion: v1
-kind: Pod
+apiVersion: apps/v1
+kind: Deployment
 metadata:
-  name: nginx
-  labels:
-        app: nginx
+  name: nginx-deployment
 spec:
-  containers:
-  - name: nginx
-    image: nginx:1.14.2
-    ports:
-    - containerPort: 80
+  replicas: 5
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx
+        ports:
+        - containerPort: 80
+        resources:
+          limits:
+            cpu: 500m
+      imagePullSecrets:
+      - name: my-registry-secret
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
-  namespace: default
-  labels:
-    app: nginx
- 
+  name: nginx-service
 spec:
-  externalTrafficPolicy: Local
+  type: LoadBalancer
+  selector:
+    app: nginx
   ports:
   - name: http
     port: 80
-    protocol: TCP
     targetPort: 80
-  selector:
-    app: nginx
-  type: LoadBalancer
