--- a/app.yml
+++ b/app.yml
@@ -1,33 +1,26 @@
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: test
+
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webapp-deployment
-  namespace: project1    # Updated namespace
+  name: nginx-deployment
+  namespace: test
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: webapp
+      app: nginx
   template:
     metadata:
       labels:
-        app: webapp
+        app: nginx
     spec:
       containers:
-      - name: webapp-container
-        image: http
-        ports:
-        - containerPort: 80
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: http
-  namespace: project1    # Updated namespace
-spec:
-  type: LoadBalancer
-  ports:
-  - port: 8080
-    targetPort: 80
-  selector:
-    app: webapp
+        - name: nginx
+          image: nginx
+          ports:
+            - containerPort: 80
